<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="@dimen/dp_16"
    >


    <vn.hitu.ntb.widget.AppTextViewBold
        android:id="@+id/appTextViewBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:gravity="center"
        android:text="@string/request_friend"
        android:textColor="@color/shimmer"
        android:background="@drawable/bg_shimmer_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <vn.hitu.ntb.widget.AppTextViewBold
        android:id="@+id/tvAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_shimmer_25"
        android:paddingVertical="@dimen/dp_4"
        android:paddingHorizontal="@dimen/dp_4"
        android:gravity="center"
        android:text="@string/icon_new"
        android:textSize="@dimen/sp_10"
        android:textColor="@color/shimmer"
        android:layout_marginStart="@dimen/dp_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/appTextViewBold"
        app:layout_constraintTop_toTopOf="parent" />

    <vn.hitu.ntb.widget.AppTextView
        android:id="@+id/tvMoreAll"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_32"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/dp_16"
        android:background="@drawable/bg_shimmer_25"
        android:drawablePadding="@dimen/dp_4"
        android:gravity="center"
        android:paddingHorizontal="@dimen/dp_8"
        android:text="@string/more_all"
        android:textColor="@color/shimmer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>