<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingDefaultResource">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="@dimen/dp_128"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_16"
        android:background="@drawable/bg_item_friend_request"
        android:backgroundTint="@color/primary_background"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgClose"
            android:layout_width="@dimen/dp_16"
            android:layout_height="@dimen/dp_16"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/dp_8"
            android:contentDescription="@string/description_place_image"
            android:src="@drawable/ic_delete"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/dp_16">

            <ImageView
                android:id="@+id/imgAvatar"
                android:layout_width="@dimen/dp_64"
                android:layout_height="@dimen/dp_64"
                android:background="@drawable/ic_background_user"
                android:contentDescription="@string/description_place_image"
                android:padding="@dimen/dp_4"
                android:src="@drawable/ic_user_default" />

            <vn.hitu.ntb.widget.AppTextView
                android:id="@+id/txtFullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginBottom="@dimen/dp_8"
                android:ellipsize="end"
                android:gravity="center"
                android:lines="2"
                android:maxLines="2"
                 />

            <vn.hitu.ntb.widget.AppButtonBold
                android:id="@+id/btnAgree"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_32"
                android:background="@drawable/bg_agree"
                android:backgroundTint="@color/blue_700"
                android:text="@string/agree"
                android:textColor="@color/white" />

            <vn.hitu.ntb.widget.AppButtonBold
                android:id="@+id/btnDenied"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_32"
                android:layout_marginTop="@dimen/dp_4"
                android:background="@drawable/bg_refuse"
                android:backgroundTint="@color/gray_300"
                android:text="@string/refuse"
                android:visibility="gone"
                android:textColor="@color/gray_600" />
        </LinearLayout>
    </RelativeLayout>
</layout>