<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lnFriendRequest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_bg_create_chat_group"
        android:orientation="vertical"
        android:visibility="visible">


        <include
            android:id="@+id/itemTitle"
            layout="@layout/item_title_request_friend" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/sflRequest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <include layout="@layout/item_friend_request_shimmer" />

                    <include layout="@layout/item_friend_request_shimmer" />

                    <include layout="@layout/item_friend_request_shimmer" />
                </LinearLayout>
            </com.facebook.shimmer.ShimmerFrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewFriendRequest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="@dimen/dp_16"
                android:paddingBottom="@dimen/dp_16"
                android:visibility="visible"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_friend_request" />

            <LinearLayout
                android:id="@+id/lnEmpty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="@dimen/dp_4"
                android:visibility="visible">

                <include layout="@layout/item_empty" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnSync"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_100"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/dp_16">

        <ImageButton
            android:id="@+id/ivSync"
            android:layout_width="@dimen/dp_48"
            android:layout_height="@dimen/dp_48"
            android:background="@drawable/bg_sync"
            android:padding="@dimen/dp_12"
            android:src="@drawable/ic_user_book"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <vn.hitu.ntb.widget.AppTextViewBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_phone_book"
                android:textColor="@color/blue_700"
                android:textSize="@dimen/sp_16"
                app:textAllCaps="true" />

            <vn.hitu.ntb.widget.AppTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/contact_alo_line"
                android:textColor="@color/gray_600"
                android:textSize="@dimen/sp_12" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8">

        <vn.hitu.ntb.widget.AppTextView
            android:id="@+id/tvAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:background="@drawable/bg_form_input_on"
            android:padding="@dimen/dp_8"
            android:text="@string/all"
            android:textColor="@color/white" />

        <vn.hitu.ntb.widget.AppTextView
            android:id="@+id/tvNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:background="@drawable/bg_form_not_friend"
            android:padding="@dimen/dp_8"
            android:text="@string/just_visited"
            android:textColor="@color/gray"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnEmptyMyFriend"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone">

        <include layout="@layout/item_empty" />
    </LinearLayout>
</LinearLayout>